--- a/.github/workflows/push_docker_image.yml
+++ b/.github/workflows/push_docker_image.yml
@@ -16,7 +16,7 @@ jobs:
   # This workflow contains a single job called "deploy_on_s3"
   push_docker_image:
     # The type of runner that the job will run on
-    runs-on: docker:latest
+    runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
